[package]
name = "pubsub-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Broker engine for the pubsub message broker"

[dependencies]
pubsub-core = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
bytes = { workspace = true }
