[package]
name = "pubsub-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol for the pubsub message broker"

[dependencies]
pubsub-core = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
