[package]
name = "pubsub-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wire protocol for the pubsub message broker"
readme = "README.md"

[dependencies]
pubsub-core = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "protocol_benchmarks"
harness = false
